--- a/app/views/portfolios/math_integrals.html.erb
+++ b/app/views/portfolios/math_integrals.html.erb
@@ -1,19 +1,9 @@
-<h1>Portfolio Items</h1>
-
-<a href="portfolios/new">Create New Item</a>
+<h1>Math Integrals Portfolio Items</h1>
 
 <%= link_to "Create New Item", new_portfolio_path %>
 
-<!-- <p>
-	<%= new_portfolio_path %>
-</p>
 
-<p>
-	<%= new_portfolio_url %>
-</p> -->
-
-
-<% @portfolio_items.each do |portfolio_item| %>
+<% @math_integrals_portfolio_items.each do |portfolio_item| %>
 	<p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></p>
 		
 	<p><%= portfolio_item.subtitle %></p>	
