--- a/app/views/portfolios/math_integrals.html.erb
+++ b/app/views/portfolios/math_integrals.html.erb
@@ -1,6 +1,6 @@
 <h1>Math Integrals Portfolio Items</h1>
 
-<%= link_to "Create New Item", new_portfolio_path %>
+<%= link_to "Create New Item", new_portfolio_path  if logged_in?(:site_admin) %>
 
 
 <% @math_integrals_portfolio_items.each do |portfolio_item| %>
@@ -9,6 +9,6 @@
 	<p><%= portfolio_item.subtitle %></p>	
 	<p><%= portfolio_item.body %></p>	
 	<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-	<%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
-	<%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
+	<%= link_to "Edit", edit_portfolio_path(portfolio_item)  if logged_in?(:site_admin) %>
+	<%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' }  if logged_in?(:site_admin) %>
 <% end %>
