--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,10 +5,6 @@
         <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-          
-
-
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= devise_error_messages! %>
 
@@ -56,11 +52,12 @@
 
         <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
       </div>
-      
     </div>
 
-
-    <%= link_to "Back", :back %>
+    <div class="auth-links">
+      <%= link_to "Back", :back %>
+    </div>
+    
 
   </div>
 </div>
