--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,14 +1,14 @@
-<p id="notice"><%= notice %></p>
+<div class="col-md-8 blog-main">
+  <!-- <h3 class="pb-3 mb-4 font-italic border-bottom">
+    From the Firehose
+  </h3> -->
 
-<p>
-  <strong>Title:</strong>
-  <%= @blog.title %>
-</p>
+  <h2><%= @blog.title %></h2>
+  <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %>
 
-<p>
-  <strong>Body:</strong>
-  <%= @blog.body %>
-</p>
+  <p><%= @blog.body %></p>
 
-<%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %> |
-<%= link_to 'Back', blogs_path %>
+</div>
+
+
+
