--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,16 +1,7 @@
-<h1>Portfolio Items</h1>
-
-<!-- <a href="portfolios/new">Create New Item</a> -->
-
-<%= link_to "Create New Item", new_portfolio_path  if logged_in?(:site_admin) %>
-
-<!-- <p>
-	<%= new_portfolio_path %>
-</p>
-
-<p>
-	<%= new_portfolio_url %>
-</p> -->
-
-
-<%= render partial: 'portfolio_item', collection: @portfolio_items %>
+<div class="album py-5 bg-light">
+	<div class="container">
+		<div class="row">
+			<%= render partial: 'portfolio_item', collection: @portfolio_items %>
+		</div>
+	</div>
+</div>
