--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,14 +1,26 @@
-<%= image_tag @portfolio_item.main_image %>
+<div class="container">
+	<div class="row">
+		<div class="col-md-7">
+			<%= image_tag @portfolio_item.main_image %>
+		</div>
+		<div class="col-md-5">
+			<h1><%= @portfolio_item.title %></h1>
 
-<h1><%= @portfolio_item.title %></h1>
-<p><%= link_to "Edit", edit_portfolio_path(@portfolio_item.id) if logged_in?(:site_admin) %></p>
+			<hr>
 
-<em><%= @portfolio_item.subtitle %></em>
+			<p><%= link_to "Edit", edit_portfolio_path(@portfolio_item.id) if logged_in?(:site_admin) %></p>
 
-<p><%= @portfolio_item.body %></p>
+			<em><%= @portfolio_item.subtitle %></em>
 
-<h2>Technologies Used</h2>
+			<p><%= @portfolio_item.body %></p>
 
-<% @portfolio_item.technologies.each do |t| %>
-	<p><%= t.name %></p>
-<% end %>
+			<hr>
+
+			<h2>Technologies Used</h2>
+
+			<% @portfolio_item.technologies.each do |t| %>
+				<p><%= t.name %></p>
+			<% end %>
+		</div>
+	</div>
+</div>
