Installed jquery ui, html5 sortable library, and css calls

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import "bootstrap";
+@import "jquery-ui";
 
 :root {
   --jumbotron-padding-y: 3rem;
