Updated images for about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,4 +2,13 @@
 
 <hr>
 
-<p>Software development is my way to become a professional researcher of the world.</p>
+<div class="row">
+    <div class="col-md-4">
+        <%= image_tag "bender_black.jpg", width: 280, alt: "Profile image" %>
+    </div>
+    <div class="col-md-8">
+        <p>Software development is my way to become a professional researcher of the world.</p>
+    </div>
+</div>
+
+
