--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,8 +146,12 @@ body {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: image_url('biker-mice-from-mars.jpg') no-repeat;
+  background: image_url('home_bg.png') no-repeat;
   background-size: cover;
+}
+
+.app-footer {
+  color: white;
 }
 
 
