--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-4">
 	<div class="card mb-4 shadow-sm" data-id="<%= portfolio_item.id %>">
-		 <%= image_tag portfolio_item.thumb_image.url , class: "card-img-top" unless portfolio_item.thumb_image.nil? %>
+		 <%= image_tag portfolio_img(portfolio_item.thumb_image.url, 'thumb') , class: "card-img-top" unless portfolio_item.thumb_image.nil? %>
 		<div class="card-body">
 			<p class="card-text">
 				<span><%= portfolio_item.title %></span> <%= portfolio_item.subtitle %>
